# XSS-Validator

./: .gitignore  Dockerfile  README.md  check_performance.py  docker-compose.yml  goal.md  pyproject.toml  run.py  tasks.md  verify_docker.sh
.github/workflows/: docker-build-push.yml
.junie/: guidelines.md
docs/: deployment.md  docker-usage.md  limitations.md  troubleshooting.md
examples/: demo.py  using_requests.py
src/xss_validator/: __init__.py  browser.py  main.py
tests/: test_performance.py  test_xss_validator.py
